dark mode fixes

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -215,7 +215,7 @@ p {
     height: 2px;
     bottom: -2px;
     left: 0;
-    background: white;
+    background: currentColor;
     transition: width 0.3s ease;
 }
 
